--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "flux": "^2.1.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-router": "^2.3.0",
     "webpack": "^1.13.0"
   }
 }
