--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "webpack": "^1.13.0"
   },
   "engines": {
-    "node": "5.10.1",
-    "npm": "3.8.3"
+    "node": "4.1.1",
+    "npm": "2.1.x"
   }
 }
